...
        password.textView.text = "123456"
        password.textView.isSecureTextEntry = true
        password.textView.autocapitalizationType = .none

        
        login = UIButton()
        login.setTitle("Connexion", for: .normal)
        login.frame = password.frame.offsetBy(dx: 0, dy: 55)
        
        noAccount = UIButton()
        noAccount.setTitle("Pas encore de compte nowaste ? Inscrivez-vous", for: .normal)
        noAccount.titleLabel?.adjustsFontSizeToFitWidth = true
        noAccount.setTitleColor(.white, for: .normal)
        noAccount.frame = CGRect(x: 20,
                                  y: rect.maxY - 60,
                                  width: rect.width - 40,
                                  height: 30)
...
