...
                                y: self.bounds.maxY - 120,
                                width: self.bounds.width - 40,
                                height: 30)
        register.setTitleColor(.white, for: .normal)
        
        accountExist = UIButton()
        accountExist.setTitle("Déjà inscrit ? Connectez-vous", for: .normal)
        accountExist.titleLabel?.adjustsFontSizeToFitWidth = true
        accountExist.setTitleColor(.white, for: .normal)
        accountExist.frame = CGRect(x: 20,
                                    y: self.bounds.maxY - 60,
                                    width: self.bounds.width - 40,
                                    height: 30)
...
