...
        nc.currentState = .map
  
        // // NAVIGATION BUTTONS
        addButton = NavigationButton(frame: CGRect(x:0, y:0, width:30, height:30), image: "plusCircle")
        addButton.addTarget(self, action:#selector(addFunction), for: .touchUpInside)
        
        listButton = NavigationButton(frame: CGRect(x:0, y:0, width:30, height:30), image: "listCircle")
        listButton.addTarget(self, action:#selector(listFunction), for: .touchUpInside)

        searchButton = NavigationButton(frame: CGRect(x:0, y:0, width:30, height:30), image: "magnifyingGlassCircle")
        searchButton.addTarget(self, action:#selector(displaySearchToggle), for: .touchUpInside)
        
        profileButton = NavigationButton(frame: CGRect(x:0, y:0, width:30, height:30), image: "personCircle")
...
